[metadata]
name = daraja
version = 0.1.0
author = Victor Ndaba
author_email = vndabam@gmail.com
description = A wrapper for working with the Mpesa API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daraja-sdks/daraja.py
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT  License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
python_requires = >=3.7
include_package_data = True


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flask = flask.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    flask
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ exports names
    src/flask/__init__.py: F401

[mypy]
files = src/flask, tests/typing
python_version = 3.7
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True